@@ -1149,6 +1149,7 @@ AttributeModifierMarshalEternalComradeHP	FeatureDefinitionAttributeModifier	Feat
 AttributeModifierMartialMountaineerPositionOfStrength	FeatureDefinitionAttributeModifier	FeatureDefinition	800f6a45-75ca-5d09-962c-6e6a1811dc85
 AttributeModifierMartialMountaineerPositionOfStrengthAura	FeatureDefinitionAttributeModifier	FeatureDefinition	d38007b4-6ac4-55c3-880e-a1368de693ae
 AttributeModifierMonkKiPointsAddProficiencyBonus	FeatureDefinitionAttributeModifier	FeatureDefinition	87c4ce58-4094-57af-8437-1d1be2549977
+AttributeModifierPathOfTheReaverProfaneVitality	FeatureDefinitionAttributeModifier	FeatureDefinition	9c792285-6219-568f-a362-c4a43acfd136
 AttributeModifierPathOfTheSavageryUnbridledFerocity	FeatureDefinitionAttributeModifier	FeatureDefinition	f15898d6-d016-553e-8e1c-5355f46e1737
 AttributeModifierPathOfTheSpiritsBearDurability	FeatureDefinitionAttributeModifier	FeatureDefinition	944c063a-bae2-57cb-b112-7d34d06e4252
 AttributeModifierRangerLightBearerLifeBringerAdditive	FeatureDefinitionAttributeModifier	FeatureDefinition	cfa1d16d-e61b-5bda-aa39-6bb0f5c2b5d5
@@ -3057,6 +3058,7 @@ AttributeModifierMarshalEternalComradeHP	FeatureDefinitionAttributeModifier	Feat
 AttributeModifierMartialMountaineerPositionOfStrength	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	800f6a45-75ca-5d09-962c-6e6a1811dc85
 AttributeModifierMartialMountaineerPositionOfStrengthAura	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	d38007b4-6ac4-55c3-880e-a1368de693ae
 AttributeModifierMonkKiPointsAddProficiencyBonus	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	87c4ce58-4094-57af-8437-1d1be2549977
+AttributeModifierPathOfTheReaverProfaneVitality	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	9c792285-6219-568f-a362-c4a43acfd136
 AttributeModifierPathOfTheSavageryUnbridledFerocity	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	f15898d6-d016-553e-8e1c-5355f46e1737
 AttributeModifierPathOfTheSpiritsBearDurability	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	944c063a-bae2-57cb-b112-7d34d06e4252
 AttributeModifierRangerLightBearerLifeBringerAdditive	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	cfa1d16d-e61b-5bda-aa39-6bb0f5c2b5d5
